# zword

./: .gitignore  AGENTS-networking.md  AGENTS.md  CMakeLists.txt  README.md  libzword.js  shell.html  zword.sln
zword/: New Text Document.txt  camera.c  collider.c  config.cfg  image.c  physics.c  physics.h  player.c  util.h  zword.c  zword.vcxproj  zword.vcxproj.filters
zword/data/images/: alarm.xcf  altar_tile.xcf  ammo_pistol.xcf  ammo_rifle.xcf  ammo_shotgun.xcf  arms.xcf  arms_assault_rifle.xcf  arms_axe.xcf  arms_axe_3d.xcf  arms_combat_shotgun.xcf  arms_knife.xcf  arms_pistol.xcf  arms_shotgun.xcf  arms_smg.xcf  arms_sniper.xcf  arms_sword.xcf  arms_watergun.xcf  assault_rifle.xcf  axe.xcf  bandage.xcf  barb_wire_tile.xcf  beach_corner.xcf  beach_tile.xcf  bed.xcf  bench.xcf  bench_debris.xcf  bench_destroyed.xcf  big_boy.xcf  big_boy_dead.xcf  birch.xcf  blood.xcf  blood_large.xcf  board_tile.xcf  boss_body.xcf  boss_dead.xcf  boss_head.xcf  brick_tile.xcf  candle.xcf  car.xcf  caution_tile.xcf  (+104 more)
zword/data/maps/: Bunker.json  Campaign.json  Killbox.json  Survival.json  Swampland.json  Tutorial.json  mp_test.json  test.json
zword/data/prefabs/creatures/: big boy.json  boss.json  farmer.json  player.json  priest.json  shaman.json  soldier.json  soldier_shotgun.json  zombie.json
zword/data/prefabs/objects/: alarm.json  bandage.json  bed.json  bench.json  birch.json  blood.json  blood_large.json  candle.json  car.json  chair.json  corpse.json  crate.json  desk.json  door.json  door_bronze.json  door_gold.json  door_locked.json  door_silver.json  duckboard.json  fire.json  flashlight.json  gas.json  grave.json  hay bale.json  hole.json  ice_block.json  key_bronze.json  key_gold.json  key_silver.json  lamp.json  marschall.json  mat.json  nitrogen.json  note.json  office_desk.json  puddle.json  rock.json  sauna.json  save_point.json  sink.json  (+9 more)
zword/data/prefabs/paths/: footpath.json  footpath_end.json  railroad.json  railroad_end.json  river.json  river_end.json  road.json  road_end.json
zword/data/prefabs/tiles/: altar.json  barb_wire.json  barrier.json  beach corner.json  beach.json  board.json  brick.json  caution.json  concrete.json  fence.json  field.json  flames.json  floor.json  grass.json  grating.json  invisible_wall.json  level_end.json  push.json  roof.json  snow.json  spawner.json  stone.json  swamp.json  tiles.json  trap.json  water.json  wood.json
zword/data/prefabs/weapons/: ammo pistol.json  ammo rifle.json  ammo shotgun.json  assault rifle.json  axe.json  flamethrower.json  hollow_point.json  knife.json  laser.json  magazine.json  pistol.json  sawed-off.json  scope.json  shotgun.json  silencer.json  smg.json  sniper.json  sword.json  watergun.json
zword/include/: animation.h  app.h  benchmark.h  building.h  camera.h  collider.h  component.h  door.h  editor.h  enemy.h  game.h  globals.h  grid.h  health.h  heap.h  hud.h  image.h  input.h  interface.h  item.h  level.h  light.h  list.h  menu.h  navigation.h  netgame.h  network.h  object.h  particle.h  path.h  perlin.h  physics.h  player.h  raycast.h  road.h  serialize.h  serialize_binary.h  settings.h  sound.h  tile.h  (+5 more)
zword/src/: animation.c  app.c  benchmark.c  blendColor.frag  building.c  camera.c  collider.c  component.c  door.c  editor.c  enemy.c  game.c  globals.c  grid.c  health.c  heap.c  hud.c  image.c  input.c  interface.c  item.c  level.c  light.c  list.c  menu.c  navigation.c  netgame.c  network.c  object.c  outline.frag  particle.c  path.c  perlin.c  physics.c  player.c  raycast.c  road.c  serialize.c  serialize_binary.c  settings.c  (+8 more)
